--- a/eladmin-system/src/main/resources/config/application-dev.yml
+++ b/eladmin-system/src/main/resources/config/application-dev.yml
@@ -4,9 +4,9 @@ spring:
     druid:
       db-type: com.alibaba.druid.pool.DruidDataSource
       driverClassName: net.sf.log4jdbc.sql.jdbcapi.DriverSpy
-      url: jdbc:log4jdbc:mysql://49.235.255.179:3306/aiym?serverTimezone=Asia/Shanghai&characterEncoding=utf8&useSSL=false
+      url: jdbc:log4jdbc:mysql://localhost:3306/aiym?serverTimezone=Asia/Shanghai&characterEncoding=utf8&useSSL=false
       username: root
-      password: tanzs0916
+      password: sasa
 
       # 初始化配置
       initial-size: 3
@@ -44,9 +44,9 @@ spring:
   redis:
     #数据库索引
     database: 0
-    host: 49.235.255.179
+    host: xxxxxxx //redis 主机
     port: 6379
-    password: lQrVBDbu9rR7T3oY
+    password: xxxxx  //redis密码
     #连接超时时间
     timeout: 5000
 
